# Blue_Dome

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  _typos.toml  flake.nix
Python/Detection_Modelling/: plot_ground_sensors.py
Python_MCDP/: README.md
Python_MCDP/hazard/: hazard.py
costs.mcdplib/: CostsInterface.mcdp_interface  costs.mcdp
detection.mcdplib/: DetectionInterface.mcdp_interface  detection.mcdp  time_to_impact_reduction.mcdp  time_to_impact_three.mcdp_query.yaml
dome.mcdplib/: DroneTemplate.mcdp_template  detection.mcdp  redirection.mcdp  savings.mcdp  system.mcdp
hask/: .envrc  .gitignore  .hlint.yaml  .pre-commit-config.yaml  .vale.ini  LICENSE  README.md  dome.cabal  flake.nix  om.yaml
hask/nix/: hix.nix
hask/src/: Constants.hs  Data.hs  Main.hs  Plot.hs  Sensors.hs  Types.hs  Utils.hs
out-mcdp_plot/: detection-ndp_gojs_nowrap_expand.json  detection-ndp_graph_enclosed.dot  detection-ndp_graph_normal.dot  detection-ndp_graph_normal_TB.dot  system-ndp_graph_normal.dot
out-query/: output.yaml
py/: .gitignore  flake.nix  pyproject.toml
py-mcdp/: README.md  flake.nix  pyproject.toml  requirements.txt
redirection.mcdplib/: RedirectionInterface.mcdp_interface  deflection.mcdp  redirection.mcdp  rocket.mcdp
sensors.mcdplib/: SensorInterface.mcdp_interface  atlas.mcdp  catalina.mcdp  probability.mcdp  rubin.mcdp  select.mcdp  selection.mcdp  selection1-1.mcdp  selection1-2.mcdp  selection1_1.mcdp  selection1_2.mcdp  selection2-1.mcdp  selection2_1.mcdp  starrs-123.yaml  starrs.mcdp  starrs.yaml  ztf.mcdp
(+68 files in other folders)
